--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "babel-plugin-styled-components": "^1.11.1",
-    "emailjs-com": "^2.6.4",
-    "gatsby": "^2.24.61",
-    "gatsby-image": "^2.4.19",
-    "gatsby-plugin-layout": "^1.3.11",
-    "gatsby-plugin-manifest": "^2.4.30",
-    "gatsby-plugin-offline": "^3.2.28",
-    "gatsby-plugin-react-helmet": "^3.3.11",
-    "gatsby-plugin-sharp": "^2.6.36",
-    "gatsby-plugin-styled-components": "^3.3.11",
-    "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-transformer-sharp": "^2.5.15",
+    "babel-plugin-styled-components": "^2.0.2",
+    "emailjs-com": "^3.2.0",
+    "gatsby": "4.6.2",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-layout": "^3.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-offline": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-styled-components": "^5.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "gsap": "^3.6.0",
+    "npm-check-updates": "^12.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
