--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
+    "body-parser": "^1.19.1",
+    "dotenv": "^16.0.0",
     "emailjs-com": "^3.2.0",
+    "express": "^4.17.2",
     "gatsby": "4.6.2",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-layout": "^3.6.0",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-recaptcha": "^1.0.5",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.6.0",
+    "gatsby-source-custom-api": "^2.3.2",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
     "gsap": "^3.6.0",
@@ -22,7 +27,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-helmet": "^6.1.0",
+    "request": "^2.88.2",
     "smooth-scrollbar": "^8.5.3",
     "styled-components": "^5.2.0"
   },
